WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211215
Fix for crashes in accessibility/accessibility-node-memory-management.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=211215
Summary
Fix for crashes in accessibility/accessibility-node-memory-management.html in...
Andres Gonzalez
Reported
2020-04-29 18:47:43 PDT
Fix for crashes in accessibility/accessibility-node-memory-management.html in isolated tree mode.
Attachments
Patch
(4.49 KB, patch)
2020-04-29 18:56 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-04-29 18:56:02 PDT
Created
attachment 398017
[details]
Patch
EWS
Comment 2
2020-04-30 05:52:15 PDT
Committed
r260944
: <
https://trac.webkit.org/changeset/260944
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398017
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-04-30 05:53:16 PDT
<
rdar://problem/62647501
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug